WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37796
JPG images fail to print in Chromium
https://bugs.webkit.org/show_bug.cgi?id=37796
Summary
JPG images fail to print in Chromium
Avi Drissman
Reported
2010-04-19 06:49:40 PDT
Upstream from
http://code.google.com/p/chromium/issues/detail?id=33239
. <
rdar://problem/7874035
> (<
http://openradar.appspot.com/7874035
>): Any image source with final=false will fail to draw into a PDF context even when later updated with final=true. Therefore when the final data comes in for an image, we need to destroy and re-create the image source.
Attachments
Patch to avoid bug.
(2.04 KB, patch)
2010-04-19 06:52 PDT
,
Avi Drissman
no flags
Details
Formatted Diff
Diff
Yes, Miss Style Bot.
(2.09 KB, patch)
2010-04-19 07:08 PDT
,
Avi Drissman
simon.fraser
: review+
simon.fraser
: commit-queue-
Details
Formatted Diff
Diff
Better ChangeLog description, no code change.
(2.29 KB, patch)
2010-04-20 10:07 PDT
,
Avi Drissman
avi
: review-
avi
: commit-queue-
Details
Formatted Diff
Diff
A little more precision. Still no code change.
(2.30 KB, patch)
2010-04-20 10:08 PDT
,
Avi Drissman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Avi Drissman
Comment 1
2010-04-19 06:52:05 PDT
Created
attachment 53675
[details]
Patch to avoid bug.
WebKit Review Bot
Comment 2
2010-04-19 06:56:32 PDT
Attachment 53675
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/platform/graphics/cg/ImageSourceCG.cpp:131: Use 0 instead of NULL. [readability/null] [5] WebCore/platform/graphics/cg/ImageSourceCG.cpp:136: Use 0 instead of NULL. [readability/null] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Avi Drissman
Comment 3
2010-04-19 07:08:46 PDT
Created
attachment 53676
[details]
Yes, Miss Style Bot.
Simon Fraser (smfr)
Comment 4
2010-04-20 09:59:19 PDT
Comment on
attachment 53676
[details]
Yes, Miss Style Bot.
> Index: WebCore/ChangeLog > =================================================================== > --- WebCore/ChangeLog (revision 57809) > +++ WebCore/ChangeLog (working copy) > @@ -1,3 +1,13 @@ > +2010-04-19 Avi Drissman <
avi@chromium.org
> > + > + Reviewed by NOBODY (OOPS!). > + > + JPG images fail to print in Chromium > +
https://bugs.webkit.org/show_bug.cgi?id=37796
This needs more verbage to say what the underlying problem is (referencing the radar), and what you did to fix it. r=me
Avi Drissman
Comment 5
2010-04-20 10:07:39 PDT
Created
attachment 53833
[details]
Better ChangeLog description, no code change.
Avi Drissman
Comment 6
2010-04-20 10:08:54 PDT
Created
attachment 53834
[details]
A little more precision. Still no code change.
WebKit Commit Bot
Comment 7
2010-04-21 05:23:06 PDT
Comment on
attachment 53834
[details]
A little more precision. Still no code change. Clearing flags on attachment: 53834 Committed
r57969
: <
http://trac.webkit.org/changeset/57969
>
WebKit Commit Bot
Comment 8
2010-04-21 05:23:11 PDT
All reviewed patches have been landed. Closing bug.
James Robinson
Comment 9
2010-04-21 12:57:24 PDT
I think this broke http/tests/multipart/invalid-image-data.html, see
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=http%2Ftests%2Fmultipart%2Finvalid-image-data.html&useWebKitCanary=true
Is this a regression or a progression?
Avi Drissman
Comment 10
2010-04-21 13:44:23 PDT
I actually don't know. Lin/Win were displaying blank because they were incorrectly showing the second image which wasn't decoding correctly (see
http://code.google.com/p/chromium/issues/detail?id=8729
). The Mac was working correctly? Looking at the code that put the test in, it's dealing with saving/extracting the data at a level totally different than the one I'm dealing with...
Avi Drissman
Comment 11
2010-04-21 14:31:35 PDT
So apparently Chromium Mac is now broken in the same way as Chromium Win/Lin is, rather than unexpectedly passing. I don't know if that's a good or bad thing.
James Robinson
Comment 12
2010-04-21 14:33:44 PDT
Hmm. I've marked it as an expected failure for now and will file a separate bug to track it (if we don't have one already).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug